refactor: standardized exceptions